# amplifier-bundle-reality-check

./: .gitignore  AGENTS.md  README.md  bundle.md  pyproject.toml
.amplifier/digital-twin-universe/profiles/: reality-check-in-incus-simple.yaml  reality-check-in-incus.yaml
agents/: browser-tester.md  generic-tester.md  intent-analyzer.md  report.md  terminal-tester.md  validation-dispatcher.md
behaviors/: reality-check.yaml
context/: reality-check-awareness.md
docs/: DEVELOPMENT.md  playground.md  reality-check-architecture.dot
fixtures/: amplifier-chat-conversation.md  amplifier-chat-spec.md
fixtures/bugs/: pin-persistence.patch  send-noop.patch
recipes/: intent-iteration.yaml  reality-check-pipeline.yaml  report-iteration.yaml
scripts/: run-reality-check-validation-simple.sh  run-reality-check-validation.sh  setup-e2e-playground.sh
src/amplifier_bundle_reality_check/: __init__.py  acceptance_tests.py  cli.py  report.py  report_html.py
tests/: helpers.py  test_cli.py  test_ids.py  test_report.py  test_report_html.py
tests/fixtures/: invalid-bad-entry-point.yaml  invalid-bad-software-type.yaml  invalid-bad-step-shape.yaml  invalid-empty-steps.yaml  invalid-missing-summary.yaml  invalid-old-generic-type.yaml  invalid-unknown-key.yaml  valid-comprehensive.yaml  valid-minimal.yaml  valid-other-test-type.yaml  valid-with-metadata.yaml
tests/fixtures/mixed-directory/: bad.yaml  good.yaml
tests/fixtures/reports/: acceptance-3-tests.yaml  raw-all-pass.yaml  raw-extra-toplevel-key.yaml  raw-malformed-yaml.yaml  raw-mixed.yaml  raw-no-results-key.yaml  (+1 more)
(+2 files in other folders)
